# bwlimit

./: Cargo.toml  README.md
macos/: AppIcon.icns
scripts/: build-distribution.sh  generate-macos-icon.swift  install-local.sh  package-macos-app.sh
src/: app.rs  bw.rs  main.rs
